--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -65,11 +65,11 @@
             <com.mapbox.mapboxsdk.maps.MapView
                 android:id="@+id/mapview"
                 android:layout_width="fill_parent"
-                android:layout_height="600dp"
-                android:layout_alignParentTop="true"
+                android:layout_height="500dp"
                 android:layout_alignParentStart="true"
-                mapbox:style_url="@string/style_mapbox_streets"
-                mapbox:access_token="pk.eyJ1IjoicGxhdHlwdXNsbGMiLCJhIjoiY2lsM3p5bjJyM3U0N3Z5bTNxbmFpZXNwaSJ9.YWzXSt3aXtpoBrdMPmLE3Q"/>
+                android:layout_alignParentTop="true"
+                mapbox:access_token="pk.eyJ1IjoicGxhdHlwdXNsbGMiLCJhIjoiY2lsM3p5bjJyM3U0N3Z5bTNxbmFpZXNwaSJ9.YWzXSt3aXtpoBrdMPmLE3Q"
+                mapbox:style_url="@string/style_mapbox_streets" />
 
 
             <Button
@@ -299,6 +299,7 @@ android:layout_marginLeft="1dp"
         android:layout_toEndOf="@+id/sensortype3" />
 
     <ToggleButton
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/SensorStart"
@@ -306,6 +307,45 @@ android:layout_marginLeft="1dp"
         android:textOn="Show Sensorvalue"
         android:layout_toEndOf="@id/SValue3"
         android:layout_alignBottom="@id/SValue3"/>
+
+    <Button
+        android:id="@+id/sampler_1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/SensorStart"
+        android:layout_marginStart="105dp"
+        android:layout_toEndOf="@+id/SensorStart"
+        android:text="1" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/sampler_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/sampler_1"
+        android:layout_toEndOf="@+id/sampler_1"
+        android:text="2" />
+
+    <Button
+        android:id="@+id/sampler_4"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/sampler_2"
+        android:layout_alignBottom="@+id/sampler_2"
+        android:layout_marginStart="64dp"
+        android:layout_toEndOf="@+id/sampler_2"
+        android:text="4" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Grab Sampler"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/sampler_1" />
 
 
     <!--android:textSize="18dp"-->
@@ -340,6 +380,24 @@ android:layout_marginLeft="1dp"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/relativeLayout_map"
         android:text="Map Information" />
+
+    <Button
+        android:id="@+id/sampler_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="22dp"
+        android:text="3"
+        android:layout_below="@+id/relativeLayout_map"
+        android:layout_toStartOf="@+id/connectButton" />
+
+    <Button
+        android:id="@+id/sampler_reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sampler_3"
+        android:layout_toStartOf="@+id/connectButton"
+        android:text="Reset Sampler" />
     <!--     <Button
         android:id="@+id/mapButton"
         android:layout_width="match_parent"
